<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.andrea.cabinetmapper.CommitCabinetActivity"
    android:id="@+id/relLay">


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telecom"
        android:id="@+id/telecom"
        android:layout_alignParentStart="true"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vodafone"
        android:id="@+id/vodafone"
        android:checked="false"
        android:layout_below="@+id/telecom"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fastweb"
        android:id="@+id/fastweb"
        android:layout_below="@+id/vodafone"
        android:layout_alignParentStart="true"
        android:checked="false" />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/sendreport"
        android:layout_marginTop="10dp"
        tools:context=".MapsActivity"
        tools:layout="@layout/activity_cabinet_map" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_report"
        android:id="@+id/sendreport"
        android:onClick="sendReport"
        android:layout_alignBottom="@+id/fastweb"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/cabcode"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:digits="0123456789QWERTYUIOPASDFGHJKLZXCVBNM-"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/code"
        android:inputType="textCapCharacters" />
</RelativeLayout>
